--- a/config/routes/api_platform.yaml
+++ b/config/routes/api_platform.yaml
@@ -2,3 +2,10 @@ api_platform:
     resource: .
     type: api_platform
     prefix: /api
+
+auth:
+    path: /auth
+    methods: ['POST']
+    
+api_login_check:
+    path: /api/login_check
