--- a/config/packages/api_platform.yml
+++ b/config/packages/api_platform.yml
@@ -2,3 +2,8 @@
 api_platform:
     defaults:
         pagination_items_per_page: 30 # Default value
+    swagger:
+         api_keys:
+             JWT:
+                name: Authorization
+                type: header
